--- a/src/app/components/commands/commands.component.html
+++ b/src/app/components/commands/commands.component.html
@@ -19,6 +19,8 @@
     <p>ng serve --port PORT_NUMBER</p>
     <p>ng build --prod</p>
     <p>ng g c COMPONENET_NAME</p>
+    <p>ng g c COMPONENET_NAME -s --skipTests</p>
+    <p>ng g class CLASS_NAME --skipTests</p>
     <p>ng g s SERVICE_NAME</p>
     <p>ng g m MODULE_NAME</p>
     <p>ng g p PIPE_NAME</p>
