--- a/src/app/sidebar/sidebar.component.html
+++ b/src/app/sidebar/sidebar.component.html
@@ -1,5 +1,13 @@
 <div class="list-group">
-    <a  *ngFor="let item of menuItemsList" routerLink="/{{item.link}}" class="list-group-item list-group-item-action" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}">
-        {{item.name}}
-    </a>
+    <div *ngIf="isAuthenticated">
+        <a href="#" (click)="onLogout($event)" class="btn btn-danger">Logout</a>
+        <a  *ngFor="let item of menuItemsList" routerLink="/{{item.link}}" class="list-group-item list-group-item-action" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}">
+            {{item.name}}
+        </a>
+    </div>
+    <div *ngIf="!isAuthenticated">
+        <a [routerLink]="['/firebase-login']" class="list-group-item list-group-item-action" routerLinkActive="active" [routerLinkActiveOptions]="{ exact: true}">
+            Login
+        </a>
+    </div>
 </div>
